Table Customer{
  customer_id INTEGER [primary key]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
  personal_number CHAR(12) [unique]
  phone INTEGER(30) [not null, unique]
  email VARCHAR(50) [not null, unique]
  adress VARCHAR(50) [not null]
}

Table Order{
  order_id INTERGER [primary key]
  customer_id INTEGER [not null, ref: > Customer.customer_id]
  order_date DATE [not null] 
}

Table Orderline{
  orderline_id INTEGER [primary key]
  order_id INTEGER [not null, ref: > Order.order_id]
  product_id INTEGER [not null, ref: > Product.product_id]
  quantety INTEGER [not null]
}

Table Product{
  product_id INTEGER [primary key]
  name VARCHAR(50) [not null]
  price DOUBLE [not null]
}